# last-aeon

./: .gitignore  Cargo.toml  README.md  pyproject.toml  run.bat
.cargo/: config.toml
.claude/: launch.json
.github/workflows/: ci.yml
assets/content/core/: administration.rhai  economy.rhai  events.rhai  goals.rhai  intrigue.rhai  plans.rhai  warfare.rhai
assets/content/scenario/: ashkarr-succession.rhai  starter-cast.rhai
assets/content/system/: bodies.rhai  provinces.rhai
assets/models/: ATTRIBUTION.md  aurelian_spire.glb
assets/shaders/: globe_selection.wgsl
assets/text/: strings.csv
assets/textures/maps/: README.md  vesk_province_ids.json
crates/aeon_client/: Cargo.toml  Trunk.toml  build.rs  index.html
crates/aeon_client/assets/: theme.ron
crates/aeon_client/assets/textures/maps/: ashkarr_province_ids.json
crates/aeon_client/src/: assignment_ui.rs  camera.rs  content.rs  forecast_view.rs  jobs_ui.rs  loading.rs  main.rs  map_modes.rs  map_overlay.rs  offer_view.rs  panels.rs  scene.rs  selection.rs  sim_driver.rs  skybox.rs  title.rs  view.rs
crates/aeon_client/src/ui/: actions.rs  assignment_popup.rs  assignments_panel.rs  data.rs  dock.rs  forecast.rs  icons.rs  idle_panel.rs  inspector.rs  jobs_panel.rs  ledger_panel.rs  listing.rs  log_panel.rs  lookup.rs  mod.rs  overlays.rs  panel.rs  picker.rs  search.rs  shell.rs  specimen.rs  theme.rs  top_bar.rs  widgets.rs
crates/aeon_client/tests/: strings.rs
crates/aeon_core/: Cargo.toml
crates/aeon_core/src/: calendar.rs  fixed.rs  hash.rs  id.rs  lib.rs  rng.rs
crates/aeon_data/: Cargo.toml
crates/aeon_data/src/: effect.rs  fs.rs  host.rs  key.rs  lib.rs  model.rs  report.rs  text.rs
crates/aeon_data/src/host/: builders.rs  display.rs  mod.rs  validate.rs
crates/aeon_data/tests/: loading.rs
crates/aeon_sim/: Cargo.toml
crates/aeon_sim/src/: access.rs  agency.rs  assignments.rs  clock.rs  command.rs  config.rs  crisis.rs  economy.rs  events.rs  forces.rs  forecast.rs  goals.rs  host.rs  ids.rs  jobs.rs  lib.rs  map.rs  obligations.rs  order.rs  persistence.rs  plans.rs  politics.rs  presence.rs  snapshot.rs  state.rs  text.rs  trade.rs  warfare.rs
crates/aeon_sim/tests/: acceptance.rs  assignments.rs  content_binding.rs  determinism.rs  events.rs  goals.rs  intrigue.rs  jobs.rs  logistics.rs  order.rs  plans.rs  politics.rs  scenario.rs  trade.rs  warfare.rs
crates/aeon_tools/: Cargo.toml
crates/aeon_tools/src/: main.rs
pasm/spec/architecture/: implementation-decisions.yaml
pasm/spec/core/: game-vision.yaml
pasm/spec/roadmap/: milestone-10-shadows.yaml  milestone-2-consequences-and-clarity.yaml  milestone-3-interface-and-quality-of-life.yaml  milestone-4-the-assignment-pass.yaml  milestone-5-persons-and-plans.yaml  milestone-6-plans-reach-the-field.yaml  milestone-7-the-front-door.yaml  milestone-8-grand-strategy.yaml  milestone-9-the-living-economy.yaml  mvp-implementation.yaml
the_last_aeons/: world.md  world.spec.yaml  worldspec_core_spec_v0_6.md
the_last_aeons/chronology/: world_anvil_timelines.md
the_last_aeons/entities/: import_01.md  import_02.md  import_03.md  import_04.md  import_05.md  import_06.md  import_07.md  import_08.md  import_09.md  import_10.md
tools/: build_map_textures.ps1
