[project]
name = "pasm"
version = "0.1.0"
description = "Portable executable architecture model tooling for The Last Aeons."
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
pasm = "pasm.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pasm"]
