[package]
name = "aeon_core"
description = "Engine-agnostic foundations: stable IDs, deterministic RNG, calendar, fixed-point arithmetic, state hashing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
