[package]
name = "aeon_data"
description = "Authored-content pipeline: Rhai script host, content definitions, loaders, and content validation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aeon_core = { workspace = true }
rhai = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
